# gpudct

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  benchmark.cpp  dct.cu  dct.hpp  gpujpeg.cu  gpujpeg.hpp  psnr.cu  psnr.hpp  test.cpp  util.cpp  util.hpp
